changed name/button/ - buttons components

--- a/src/components/Display/Display.module.scss
+++ b/src/components/Display/Display.module.scss
@@ -1,5 +1,2 @@
-@import "../../styles/settings.scss";
+//@import "../../styles/settings.scss";
 
-.main-section {
-  background-color: $color-light;
-}
